# infinity-assistant

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOYMENT_EXECUTION_LOG.md  DEPLOY_NOW.md  Dockerfile  Dockerfile.dev  GEMINI.md  InfinityAssistant_EV_Quantum_Integration_Complete.md  InfinityAssistant_EV_Quantum_Integration_Plan.md  README.md  STREAMING_CHAT_GUIDE.md  VERCEL_DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.yml  next.config.js  next.config.mjs  openapi.yaml  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
docs/: ADDITIONAL_PROVIDERS_INTEGRATION_COMPLETE.md  ALL_PRIORITIES_COMPLETE.md  API_KEY_TRACKING_EXPORT_COMPLETE.md  API_PLAYGROUND.md  BUILDER_CYCLE_REPORT_ANALYTICS_AND_AUTOMATION_2025-02-06.md  BUILD_PLAN_ANALYTICS_DASHBOARD_ENHANCEMENT_2025-02-06.md  BUILD_PLAN_KNOWLEDGE_GAP_AUTOMATION_2025-02-06.md  CEO_AUTONOMOUS_STRATEGIC_ASSESSMENT_2025-02-06.md  CEO_CYCLE_REPORT_AUTONOMOUS_ASSESSMENT_2025-02-06.md  CEO_STRATEGIC_PLAN_KNOWLEDGE_ECOSYSTEM_2025-02-06.md  COMPANION_IMPLEMENTATION.md  COMPANION_VS_PROFESSIONAL_ANALYSIS.md  COMPLETED_FEATURES_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DASHBOARD_COMPARISON.md  DEPLOYMENT_CHECKLIST_2025-02-06.md  DEPLOYMENT_COMMENCED_2025-02-06.md  DEPLOYMENT_GUIDE_ANALYTICS_AND_AUTOMATION_2025-02-06.md  DEPLOYMENT_SUMMARY_2025-02-06.md  DEVELOPER_MVP_ACTION_PLAN.md  DEVELOPER_MVP_FINAL_STATUS.md  DEVELOPER_MVP_LAUNCH_READY.md  DEVELOPER_MVP_PROGRESS_UPDATE.md  DOCKER_DEPLOYMENT.md  (+29 more)
sdk/python/: .gitignore  README.md  pyproject.toml  setup.py
sdk/python/examples/: async_example.py  basic_usage.py  streaming_chat.py
sdk/python/infinity_assistant/: __init__.py  async_client.py  client.py  exceptions.py  types.py
(+419 files in other folders)
